--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/video.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/video.svg" /> -->
+    <link rel="icon" sizes="128x128" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VideoConnect</title>
   </head>
